<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SharedPreference</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>

    <string name="save">Save Contact</string>
    <string name="show">Show Details</string>

</resources>
