<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DisplayContact" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_gravity="bottom|right" style="@style/background">

        <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="82dp"
                android:ems="10"
                android:inputType="text" android:layout_alignParentRight="true" style="@style/background"
                android:clickable="false">

        </EditText>

        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" android:layout_alignLeft="@+id/editTextName"
                android:layout_below="@+id/editTextStreet" android:layout_alignRight="@+id/editTextCity"/>

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignParentLeft="true"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
                android:id="@+id/button1"
                android:layout_width="102dp"
                android:layout_height="59dp"
                android:onClick="run"
                android:text="@string/save"
                style="@style/background" android:background="#FF9933"
                android:layout_centerHorizontal="true" android:layout_below="@+id/editTextCity"/>

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextEmail"
                android:layout_alignLeft="@+id/textView1"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextPhone"
                android:layout_alignLeft="@+id/textView1"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editTextEmail"
                android:layout_alignLeft="@+id/textView5"
                android:text="@string/street"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
                android:id="@+id/editTextCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:layout_alignParentRight="true" android:layout_alignParentTop="true"
                android:layout_marginTop="194dp" android:layout_alignLeft="@+id/editTextName"/>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextCity"
                android:layout_alignBottom="@+id/editTextCity"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/editTextEmail"
                android:text="@string/country"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
                android:id="@+id/editTextStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextName"
                android:layout_below="@+id/editTextPhone"
                android:ems="10"
                android:inputType="text" android:layout_alignRight="@+id/editTextCity">

            <requestFocus />
        </EditText>

        <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/editTextStreet"
                android:layout_below="@+id/editTextName"
                android:ems="10"
                android:inputType="phone|text" android:layout_alignRight="@+id/editTextEmail"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:text="@string/show"
                android:id="@+id/show"
                android:layout_alignRight="@+id/editTextName" android:layout_below="@+id/textView3"
                style="@style/background" android:background="#9933CC" android:layout_alignBottom="@+id/button1"/>

    </RelativeLayout>

</ScrollView>
